# Omni-hud

./: .env.example  .gitignore  Omni_HUD.spec  README.md  ai_engine.py  build_exe.py  chats.json  constants.py  document_processor.py  gui.py  history_manager.py  main.py  omni_installer.iss  omni_lite_installer.iss  omni_web_installer.iss  package-lock.json  package.json  pyproject.toml  screen_processor.py  setup_env.bat  setup_lite.bat  styles.py  test_api.py  utils.py  voice_engine.py  web_search.py
electron/: main.js  preload.js  selector-preload.js
src/main/: ai.js  auth.js  chatsDb.js  config.js  documents.js  screen.js  storage.js  supabase.config.example.json  supabase.config.json  updates.js  voice.js
src/renderer/: app.js  auth.js  chat.js  constants.js  fileExplorer.js  index.html  selector.html  state.js  styles.css  tools.js  ui.js  utils.js
